force-app/main/default/objects/AWS_Sync__c/AWS_Sync__c.object-meta.xml
<CustomObject>
    <description>Stores Configuration related to each object that needs to be synced.</description>
    <label>AWS Sync</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS Sync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>