force-app/main/default/objects/AWS_Sync__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>The list of fields to Query</description>
    <inlineHelpText>The list of fields to Query</inlineHelpText>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>