force-app/main/default/objects/AWS_Sync__c/fields/Max_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Limit__c</fullName>
    <label>Max Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>