force-app/main/default/objects/AWS_Sync__c/fields/Real_Time_Skip__c.field-meta.xml
<CustomField>
    <fullName>Real_Time_Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Real Time Skip?</label>
    <type>Checkbox</type>
</CustomField>