force-app/main/default/objects/AWS_Sync__c/fields/Run_From__c.field-meta.xml
<CustomField>
    <fullName>Run_From__c</fullName>
    <label>Run From</label>
    <type>DateTime</type>
</CustomField>