force-app/main/default/objects/AWS_Sync__c/fields/Skip__c.field-meta.xml
<CustomField>
    <fullName>Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip?</label>
    <type>Checkbox</type>
</CustomField>