force-app/main/default/objects/AWS_Sync__c/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <description>Source AWS Dynamo Db Table</description>
    <inlineHelpText>Source AWS Dynamo Db Table</inlineHelpText>
    <label>Table Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>