force-app/main/default/objects/AWS_Sync__c/fields/Use_Query__c.field-meta.xml
<CustomField>
    <fullName>Use_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Query</label>
    <type>Checkbox</type>
</CustomField>