force-app/main/default/objects/AWS_Sync__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Skip__c</columns>
    <columns>Real_Time_Skip__c</columns>
    <columns>Use_Query__c</columns>
    <columns>Run_From__c</columns>
    <columns>Max_Limit__c</columns>
    <columns>Table_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>